Start setting the sidebar

--- a/index.html
+++ b/index.html
@@ -6,5 +6,86 @@
     <title>Admin Dashboard</title>
     <link rel="stylesheet" href="styles.css" />
   </head>
-  <body></body>
+  <body>
+    <div class="dashboard">
+      <div class="sidebar grid-spacer">
+        <div class="sidebar__title grid-list">
+          <div class="dashboard-icon"></div>
+          <h1>Dashboard</h1>
+        </div>
+        <div class="sidebar__main-nav">
+          <nav>
+            <ul class="grid-spacer">
+              <li>
+                <a href="#" class="grid-list"
+                  ><span class="nav-icon"></span>Home</a
+                >
+              </li>
+              <li>
+                <a href="#" class="grid-list"
+                  ><span class="nav-icon"></span>Profile</a
+                >
+              </li>
+              <li>
+                <a href="#" class="grid-list"
+                  ><span class="nav-icon"></span>Messages</a
+                >
+              </li>
+              <li>
+                <a href="#" class="grid-list"
+                  ><span class="nav-icon"></span>History</a
+                >
+              </li>
+              <li>
+                <a href="#" class="grid-list"
+                  ><span class="nav-icon"></span>Tasks</a
+                >
+              </li>
+              <li>
+                <a href="#" class="grid-list"
+                  ><span class="nav-icon"></span>Communities</a
+                >
+              </li>
+            </ul>
+          </nav>
+        </div>
+        <div class="sidebar__secondary-nave">
+          <nav>
+            <ul class="grid-spacer">
+              <li>
+                <a href="#" class="grid-list"
+                  ><span class="nav-icon"></span>Settings</a
+                >
+              </li>
+              <li>
+                <a href="#" class="grid-list"
+                  ><span class="nav-icon"></span>Support</a
+                >
+              </li>
+              <li>
+                <a href="#" class="grid-list"
+                  ><span class="nav-icon"></span>Privacy</a
+                >
+              </li>
+            </ul>
+          </nav>
+        </div>
+      </div>
+      <div class="header">
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptates
+        beatae repudiandae quos sequi eius atque autem dolorem fugit iure iusto.
+        Veniam, ullam! Fugiat soluta cumque ducimus pariatur asperiores.
+        Provident possimus recusandae veritatis asperiores vero in laudantium a
+        culpa deserunt non!
+      </div>
+      <div class="main-content">
+        Lorem ipsum dolor sit amet consectetur, adipisicing elit. Iure omnis
+        libero excepturi provident nihil ullam accusantium esse similique,
+        cupiditate labore, at quasi. Molestiae sed non odio, dolorem impedit
+        quisquam sequi exercitationem delectus quis quo cupiditate? Non
+        reiciendis, asperiores error aperiam sed officia placeat maiores ad
+        accusantium deleniti, voluptas quasi iusto.
+      </div>
+    </div>
+  </body>
 </html>
