Improve the html

--- a/index.html
+++ b/index.html
@@ -8,41 +8,41 @@
   </head>
   <body>
     <div class="dashboard">
-      <div class="sidebar grid-spacer">
-        <div class="sidebar__title grid-list">
+      <div class="sidebar grid-spacer-block">
+        <div class="sidebar__title grid-spacer-inline">
           <div class="dashboard-icon"></div>
           <h1>Dashboard</h1>
         </div>
         <div class="sidebar__main-nav">
           <nav>
-            <ul class="grid-spacer">
+            <ul class="grid-spacer-block">
               <li>
-                <a href="#" class="grid-list"
+                <a href="#" class="grid-spacer-inline"
                   ><span class="nav-icon"></span>Home</a
                 >
               </li>
               <li>
-                <a href="#" class="grid-list"
+                <a href="#" class="grid-spacer-inline"
                   ><span class="nav-icon"></span>Profile</a
                 >
               </li>
               <li>
-                <a href="#" class="grid-list"
+                <a href="#" class="grid-spacer-inline"
                   ><span class="nav-icon"></span>Messages</a
                 >
               </li>
               <li>
-                <a href="#" class="grid-list"
+                <a href="#" class="grid-spacer-inline"
                   ><span class="nav-icon"></span>History</a
                 >
               </li>
               <li>
-                <a href="#" class="grid-list"
+                <a href="#" class="grid-spacer-inline"
                   ><span class="nav-icon"></span>Tasks</a
                 >
               </li>
               <li>
-                <a href="#" class="grid-list"
+                <a href="#" class="grid-spacer-inline"
                   ><span class="nav-icon"></span>Communities</a
                 >
               </li>
@@ -51,19 +51,19 @@
         </div>
         <div class="sidebar__secondary-nave">
           <nav>
-            <ul class="grid-spacer">
+            <ul class="grid-spacer-block">
               <li>
-                <a href="#" class="grid-list"
+                <a href="#" class="grid-spacer-inline"
                   ><span class="nav-icon"></span>Settings</a
                 >
               </li>
               <li>
-                <a href="#" class="grid-list"
+                <a href="#" class="grid-spacer-inline"
                   ><span class="nav-icon"></span>Support</a
                 >
               </li>
               <li>
-                <a href="#" class="grid-list"
+                <a href="#" class="grid-spacer-inline"
                   ><span class="nav-icon"></span>Privacy</a
                 >
               </li>
@@ -72,19 +72,171 @@
         </div>
       </div>
       <div class="header">
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptates
-        beatae repudiandae quos sequi eius atque autem dolorem fugit iure iusto.
-        Veniam, ullam! Fugiat soluta cumque ducimus pariatur asperiores.
-        Provident possimus recusandae veritatis asperiores vero in laudantium a
-        culpa deserunt non!
+        <div class="header__search-bar">
+          <div class="search-bar__icon"></div>
+          <div class="search-bar__input">
+            <input type="text" />
+          </div>
+        </div>
+        <div class="header__profile-actions">
+          <div class="bell-icon"></div>
+          <div class="profile-icon-small"></div>
+          <div class="profile-name-small">Morgan Oakley</div>
+        </div>
+        <div class="header__profile-id">
+          <div class="profile-icon-big"></div>
+          <div class="profile-text-container">
+            <p class="greeting">Hi there,</p>
+            <p class="profile-name-big">Morgan Oakley (@morgan)</p>
+          </div>
+        </div>
+        <div class="header__btns">
+          <button class="header-btn" type="button">New</button>
+          <button class="header-btn" type="button">Upload</button>
+          <button class="header-btn" type="button">Share</button>
+        </div>
       </div>
       <div class="main-content">
-        Lorem ipsum dolor sit amet consectetur, adipisicing elit. Iure omnis
-        libero excepturi provident nihil ullam accusantium esse similique,
-        cupiditate labore, at quasi. Molestiae sed non odio, dolorem impedit
-        quisquam sequi exercitationem delectus quis quo cupiditate? Non
-        reiciendis, asperiores error aperiam sed officia placeat maiores ad
-        accusantium deleniti, voluptas quasi iusto.
+        <div class="main-content__projects-container">
+          <div class="projects-title">Your Projects</div>
+          <div class="projects-grid">
+            <div class="project-card">
+              <div class="card-title">Super Cool Project</div>
+              <div class="card-description">
+                Sed tempus ut lacus ut scelerisque. Suspendisse sollicitudin
+                nibh erat, id facilisis felis accumsan nec.
+              </div>
+              <div class="card-icons">
+                <div class="star-icon"></div>
+                <div class="eye-icon"></div>
+                <div class="branch-icon"></div>
+              </div>
+            </div>
+            <div class="project-card">
+              <div class="card-title">Less Cool Project</div>
+              <div class="card-description">
+                Nullam condimentum ipsum ut lectus vehicula consectetur. Quisque
+                sed dolor tincidunt, consectetur sapien et, facilisis dolor.
+                Duis sem purus, dignissim ut sapien in, varius pellentesque
+                lacus.
+              </div>
+              <div class="card-icons">
+                <div class="star-icon"></div>
+                <div class="eye-icon"></div>
+                <div class="branch-icon"></div>
+              </div>
+            </div>
+            <div class="project-card">
+              <div class="card-title">Impossible App</div>
+              <div class="card-description">
+                In hac habitasse platea dictumst. Vivamus dictum rutrum arcu, a
+                placerat velit sagittis id
+              </div>
+              <div class="card-icons">
+                <div class="star-icon"></div>
+                <div class="eye-icon"></div>
+                <div class="branch-icon"></div>
+              </div>
+            </div>
+            <div class="project-card">
+              <div class="card-title">Easy Peasy App</div>
+              <div class="card-description">
+                Etiam cursus eros ac efficitur fringilla. Vestibulum dignissim
+                urna eget accumsan aliquam. Curabitur dignissim nisi in tortor
+                commodo, ac bibendum magna tincidunt.
+              </div>
+              <div class="card-icons">
+                <div class="star-icon"></div>
+                <div class="eye-icon"></div>
+                <div class="branch-icon"></div>
+              </div>
+            </div>
+            <div class="project-card">
+              <div class="card-title">Ad Blocker</div>
+              <div class="card-description">
+                Quisque eget rutrum nisl. Nam augue justo, cursus vitae metus
+                vel, pharetra hendrerit felis. Aliquam sed malesuada eros.
+              </div>
+              <div class="card-icons">
+                <div class="star-icon"></div>
+                <div class="eye-icon"></div>
+                <div class="branch-icon"></div>
+              </div>
+            </div>
+            <div class="project-card">
+              <div class="card-title">Money Maker</div>
+              <div class="card-description">
+                Praesent convallis, libero quis congue elementum, nunc ante
+                faucibus sapien, ac scelerisque tortor purus sit amet ex.
+                Pellentesque mollis nec sem vel aliquam.
+              </div>
+              <div class="card-icons">
+                <div class="star-icon"></div>
+                <div class="eye-icon"></div>
+                <div class="branch-icon"></div>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="main-content__announcements-container">
+          <div class="announcements-title">Announcements</div>
+          <div class="announcements-grid">
+            <div class="announcement">
+              <div class="announcement-title">Site Maintenance</div>
+              <div class="announcement-description">
+                Vestibulum condimentum tellus lacus, in accumsan elit maximus
+                ac. Donec hendrerit sodales congue...
+              </div>
+            </div>
+            <div class="announcement">
+              <div class="announcement-title">Community Share Day</div>
+              <div class="announcement-description">
+                Nam vel lectus tincidunt, rutrum nulla eu, ornare libero.
+                Aliquam dictum accumsan porttitor...
+              </div>
+            </div>
+            <div class="announcement">
+              <div class="announcement-title">Updated Privacy Policty</div>
+              <div class="announcement-description">
+                Phasellus efficitur nisi eget elit consectetur, eget condimentum
+                ante auctor. Cras fringilla sagittis sem in mattis...
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="main-content__trending-container">
+          <div class="trending-title">Trending</div>
+          <div class="trending-grid">
+            <div class="trend">
+              <div class="trend-icon"></div>
+              <div class="trend-text-content">
+                <div class="trend-user">@tegan</div>
+                <div class="trend-description">World Peace Builder</div>
+              </div>
+            </div>
+            <div class="trend">
+              <div class="trend-icon"></div>
+              <div class="trend-text-content">
+                <div class="trend-user">@morgan</div>
+                <div class="trend-description">Super Cool Project</div>
+              </div>
+            </div>
+            <div class="trend">
+              <div class="trend-icon"></div>
+              <div class="trend-text-content">
+                <div class="trend-user">@kendall</div>
+                <div class="trend-description">Life Changing App</div>
+              </div>
+            </div>
+            <div class="trend">
+              <div class="trend-icon"></div>
+              <div class="trend-text-content">
+                <div class="trend-user">@alex</div>
+                <div class="trend-description">No Traffic Maker</div>
+              </div>
+            </div>
+          </div>
+        </div>
       </div>
     </div>
   </body>
